<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="number_of_pax">Number of Pax</string>
    <string name="no_svs">No SVS</string>
    <string name="svs">SVS</string>
    <string name="no_gst">No GST</string>
    <string name="gst">GST</string>
    <string name="discount">Discount(%)</string>
    <string name="paynow">PayNow</string>
    <string name="cash">Cash</string>
    <string name="each_pays">Each pays:</string>
    <string name="total_bill">Total bill:</string>
    <string name="split">Split</string>
    <string name="reset">Reset</string>

</resources>